<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/filterButton"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/pokemon_normal"
        android:text="@string/filterButtonText"
        app:layout_constraintStart_toEndOf="@+id/filterInput"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/fireButton"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/fireButtonText"
        android:fontFamily="@font/pokemon_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterInput" />

    <EditText
        android:id="@+id/filterInput"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:fontFamily="@font/pokemon_normal"
        android:hint="@string/filtro"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/waterButton"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/waterButtonText"
        android:fontFamily="@font/pokemon_normal"
        app:layout_constraintStart_toEndOf="@+id/fireButton"
        app:layout_constraintTop_toBottomOf="@+id/filterButton" />

    <Switch
        android:id="@+id/grassButton"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/grassButtonText"
        android:fontFamily="@font/pokemon_normal"
        app:layout_constraintStart_toEndOf="@+id/waterButton"
        app:layout_constraintTop_toBottomOf="@+id/filterButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pokedex"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fireButton" />

    <ImageButton
        android:id="@+id/clearButton"
        android:layout_width="79dp"
        android:layout_height="65dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/botonLimpiar"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/filterButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/basura" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/mainTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tuesday" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wednesday" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>